# rust-web-api

./: .env.example  Cargo.toml  Makefile  README.MD  docker-compose.yaml
docker/development/: Dockerfile
docker/keycloak/: .env  docker-compose.yaml
docker/production/: Dockerfile
src/: constants.rs  main.rs  utils.rs
src/middlewares/: mod.rs  request_id.rs  validate_keycloak.rs
src/modules/: error.rs  mod.rs
src/modules/common/: error.rs
src/modules/doc/: controller.rs
src/modules/error/: constant.rs  custom.rs
src/modules/health/: controller.rs  controllers.rs
src/modules/users/: controller.rs  controllers.rs  structs.rs
src/modules/users/services/: find_by_id.rs
