[package]
name = "rust-web-server"
version = "0.1.0"
authors = ["Anderson Fernandes <Anderson.filho@luizalabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-requestid = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
log = "0.4.0"
