[package]
name = "rust-web-server"
version = "0.1.0"
authors = ["Anderson Fernandes <Anderson.filho@luizalabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-requestid = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
utoipa = "3.3.0"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
derive_more = "0.99.17"
validator = "0.16.1"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
